@startuml prototype

entity "user" {
  + id [PK]
  ==
  name:string
  * email:string
  password_digest:string
  remember_digest:string
  admin:boolean
  type:string
  created_at:datetime
  updated_at:datetime
}

entity "employer < user" as employer {
  + id [PK(user, id)]
}

entity "employee < user" as employee {
  + id [PK(user, id)]
}

entity "job" {
  + id [PK]
  ==
  # employer_id [FK(employer, id)]
  title:string
  content:text
  created_at:datetime
  updated_at:datetime
}

entity "like" {
  + id [PK]
  ==
  # employee_id [FK(employee, id)]
  # job_id [FK(job, id)]
  employee_like:boolean
  job_like:boolean
  created_at:datetime
  updated_at:datetime
}

user ||--o| employer
user ||--o| employee

employer ||--o{ job

job ||--o{ like
employee ||--o{ like

@enduml
